# lpv_synthesis

./: README.md  pyproject.toml  requirements.txt
src/lpv_synthesis/: controller.py  iqc.py  main.py  system.py
tests/: test_system.py
